syntax = "proto3";

option go_package = "sama/go-task-management/commons/api";

package api;

service NotificationService {
    rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse) {}
}

enum NotificationType {
    IN_APP = 0;
    EMAIL = 1;
}

message SendNotificationRequest {
    string taskId = 1;
    repeated NotificationType types = 2;
}

message SendNotificationResponse {
    string ack = 1;
}